<resources>
    <string name="app_name">BeanFIneDust</string>

    <string name="content_des">Sorry image is not found</string>

    <string name="start_comment">Bean X Dust information</string>
    <string name="start_button">시작하기</string>
    <string name="start_login">로그인하여 시작하기</string>
    <string name="start_register">회원가입</string>

    <string name="login_email">Email</string>
    <string name="login_pwd">Password</string>
    <string name="login_name">Name</string>
    <string name="login_pass_check">Confirm Password</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">지도</string>
    <string name="menu_analysis">분석</string>
    <string name="menu_add_device">장치 추가</string>
    <string name="menu_manage_device">장치 관리</string>

    <string name="add_device_question">새로운 기기를 등록 하시겠어요?</string>
</resources>
