<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bean.beanfinedust.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_analysis"
        android:name="com.bean.beanfinedust.ui.analysis.AnalysisFragment"
        android:label="@string/menu_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/nav_add_device"
        android:name="com.bean.beanfinedust.ui.add_device.AddDeviceFragment"
        android:label="@string/menu_add_device"
        tools:layout="@layout/fragment_add_device" />

    <fragment
        android:id="@+id/nav_manage_device"
        android:name="com.bean.beanfinedust.ui.manage_device.ManageDeviceFragment"
        android:label="@string/menu_manage_device"
        tools:layout="@layout/fragment_manage_device" />

</navigation>