<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/_222sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_background"
            android:text="SIGN UP"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_check" />

        <EditText
            android:id="@+id/password"
            style="@style/login_edit"
            android:layout_marginTop="8dp"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/email"
            style="@style/login_edit"
            android:layout_marginTop="8dp"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/name"
            style="@style/login_edit"
            android:layout_marginTop="16dp"
            android:inputType="textPersonName"
            android:hint="@string/login_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/pass_check"
            style="@style/login_edit"
            android:inputType="textPersonName"
            android:hint="@string/login_pass_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_233sdp"
            android:layout_height="@dimen/_233sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_des"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bean_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/start_comment"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Getting Start"
            android:textSize="@dimen/_20sdp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>