<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".activity.StartActivity">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/round_corner"
            android:text="@string/start_login"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/_20sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/register_btn"
            app:layout_constraintBottom_toTopOf="@+id/register_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_100sdp"
            android:background="@drawable/round_corner"
            android:text="@string/start_register"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/_20sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_190sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_des"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bean" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:fontFamily="sans-serif"
            android:text="@string/start_comment"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>